--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,3 +2,6 @@
 @import "./chunks/header.scss";
 @import "./chunks/about.scss";
 @import "./chunks/gallery.scss";
+@import "./chunks/subscriptions.scss";
+@import "./chunks/contact.scss";
+@import "./chunks/footer.scss";
