--- a/src/sass/chunks/gallery.scss
+++ b/src/sass/chunks/gallery.scss
@@ -8,6 +8,7 @@
     font-weight: 700;
     font-size: 30px;
     line-height: 34px;
+    margin-bottom: 80px;
   }
 
   @import "./gallery__carousel.scss";
